[package]
name = "c2s-linked-roles"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features = ["json"] }
actix-web = "4.4"
twilight-model = "0.15.4"
twilight-http = "0.15.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
rust-crypto = "0.2.36"
serde = "1"
derive_more = "0.99.17"
tokio-postgres = "0.7"
deadpool-postgres = "0.12.1"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
async-trait = "0.1"
base64 = "0.22.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
[dependencies.uuid]
version = "1.6"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
